hero padding fixes, image overflow to right WIP

--- a/src/components/hero/_hero.scss
+++ b/src/components/hero/_hero.scss
@@ -28,10 +28,12 @@
     }
 }
   
-.great-ds-hero__container { 
+.great-ds-hero__container {
     width: 100%;
     &:not(.great-ds-hero--image-only *) {
         @extend .great-ds-container;
+        padding-top: $great-ds-spacing-8;
+        padding-bottom: $great-ds-spacing-8;
     }
     
     @include govuk-media-query($from: desktop) {
@@ -51,6 +53,7 @@
 .great-ds-hero__image-container {
     display: none;
     height: 200px;
+    overflow: visible;
     
     @include govuk-media-query($from: desktop) {
         height: 355px;
@@ -58,7 +61,6 @@
         flex: 1 0 50%;
         max-width: 50%;
         flex-shrink: 1;
-        overflow: hidden;
         text-align: right;
 
         .great-ds-hero--two-thirds & {
@@ -88,12 +90,13 @@
     .great-ds-hero--large-image-cropping & {
         @include govuk-media-query($from: desktop) {
             display: block;
-            overflow: hidden;
+            height: 100%;
         }
     }
       
     .great-ds-hero--large-image-scaling & {
         @include govuk-media-query($from: desktop) {
+            max-height: 355px;
             object-fit: contain;
         }
     }
@@ -102,6 +105,7 @@
 .great-ds-hero__image {
     @include govuk-media-query($from: desktop) {
         max-height: 355px;
+        margin-left: $great-ds-spacing-6-large;
     }
     
     .great-ds-hero--large-image-scaling & {
@@ -190,5 +194,5 @@
 }
   
 .great-ds-hero__action-link-container {
-    margin-bottom: $great-ds-spacing-8;
+    margin-bottom: $great-ds-spacing-6;
 }
